--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@ Page for "Home"
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Where It All Started<br />
+									<h2><a href="#">Welcome<br />
 									</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<p>ULV OPS is a non-funded site for creativity revolving around diverse IT topics. It will also act as a portfolio platform by showcasing previous and current on-going project.
+										The projects being uploaded will hopefully ensure improved measurement for further improved procedures which will result in an overall positive migitation for personal environment.
+									</p>
 								</header>
 								<a href="#" class="image main"><img src="images/jonathan-gallegos-HoMqP_ldh-s-unsplash.jpg" alt="" /></a>
 								<ul class="actions special">
